--- a/templates/steno/index.html
+++ b/templates/steno/index.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}Secret{% endblock %}
+
 {% block header %}
-  <h1>{% block title %}Log in for access.{% endblock %}</h1>
+  <h1>Please log in for access.</h1>
 {% endblock %}
