--- a/templates/steno/splash.html
+++ b/templates/steno/splash.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 
+{% block title %}Secret{% endblock %}
 {% block header %}
-  <h1>{% block title %}Secret{% endblock %}</h1>
+<h1>Splash</h1>
   {% if g.user %}
     <a class="action" href="{{ url_for('steno.create') }}">New</a>
   {% endif %}
