--- a/templates/steno/splash.html
+++ b/templates/steno/splash.html
@@ -9,18 +9,15 @@
 {% endblock %}
 
 {% block content %}
-  {% for steno in steno %}
-    <article class="steno">
+  {% for post in posts %}
+    <article class="post">
       <header>
         <div>
-          <h1>{{ steno['title'] }}</h1>
-          <div class="about">by {{ steno['username'] }} on {{ steno['created'].strftime('%Y-%m-%d') }}</div>
+          <h1>{{ post['title'] }}</h1>
+          <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
         </div>
-<!--        {% if g.user['id'] == steno['owner_id'] %}
-          <a class="action" href="{{ url_for('blog.update', id=post['id']) }}">Edit</a>
-        {% endif %} -->
       </header>
-      <p class="body">{{ steno['body'] }}</p>
+      <p class="body">{{ post['body'] }}</p>
     </article>
     {% if not loop.last %}
       <hr>
