--- a/templates/steno/view.html
+++ b/templates/steno/view.html
@@ -9,11 +9,10 @@
 {% endblock %}
 
 {% block content %}
-  {% for post in posts %}
     <article class="post">
       <header>
         <div>
-          <h1><a href="{{ url_for('steno.view', id=post['id']) }}">{{ post['title'] }}</a></h1>
+          <h1>{{ post['title'] }}</h1>
           <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
         </div>
         {% if g.user['id'] == post['author_id'] %}
@@ -22,8 +21,4 @@
       </header>
       <p class="body">{{ post['body'] }}</p>
     </article>
-    {% if not loop.last %}
-      <hr>
-    {% endif %}
-  {% endfor %}
 {% endblock %}
