--- a/templates/steno/splash.html
+++ b/templates/steno/splash.html
@@ -2,10 +2,8 @@
 
 {% block title %}Secret{% endblock %}
 {% block header %}
-<h1>Splash</h1>
-  {% if g.user %}
-    <a class="action" href="{{ url_for('steno.create') }}">New</a>
-  {% endif %}
+  <h1>Splash</h1>
+  <a class="action" href="{{ url_for('steno.create') }}">New</a>
 {% endblock %}
 
 {% block content %}
@@ -14,10 +12,13 @@
       <header>
         <div>
           <h1><a href="{{ url_for('steno.view', id=post['id']) }}">{{ post['title'] }}</a></h1>
-          <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }}</div>
+          <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }} with OTP {{ post['otp'] }}</div>
         </div>
         {% if g.user['id'] == post['author_id'] %}
           <a class="action" href="{{ url_for('steno.update', id=post['id']) }}">Edit</a>
+          <form action="{{ url_for('steno.delete', id=post['id']) }}" method="post">
+            <input class="danger" type="submit" value="Delete" onclick="return confirm('Are you sure?');">
+          </form>
         {% endif %}
       </header>
       <p class="body">{{ post['body'] }}</p>
