--- a/templates/steno/view.html
+++ b/templates/steno/view.html
@@ -2,7 +2,7 @@
 
 {% block title %}Secret{% endblock %}
 {% block header %}
-<h1>Splash</h1>
+<h1>View Single Message</h1>
   {% if g.user %}
     <a class="action" href="{{ url_for('steno.create') }}">New</a>
   {% endif %}
