--- a/templates/steno/view.html
+++ b/templates/steno/view.html
@@ -13,7 +13,7 @@
       <header>
         <div>
           <h1>{{ post['title'] }}</h1>
-          <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }} with OTP {{ post['otp'] }}</div>
+          <div class="about">by {{ post['username'] }} on {{ post['created'].strftime('%Y-%m-%d') }} with OTP {{ post['otp'] }}. This message was last read at {{ post['readtime'] }}.</div>
         </div>
         {% if g.user['id'] == post['author_id'] %}
           <a class="action" href="{{ url_for('steno.update', otp=post['otp']) }}">Edit</a>
